--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -43,13 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#API Url\n",
     "url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
-    "units = \"metric\"\n",
+    "units = \"imperial\"\n",
     "query_url = f\"{url}appid={weather_api_key}&units={units}&q=\" "
    ]
   },
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "602"
+       "610"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,127 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Ancud</td>\n",
-       "      <td>40</td>\n",
-       "      <td>CL</td>\n",
-       "      <td>1580084616</td>\n",
-       "      <td>59</td>\n",
-       "      <td>-41.87</td>\n",
-       "      <td>-73.82</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Port Augusta</td>\n",
-       "      <td>75</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>1580118923</td>\n",
-       "      <td>82</td>\n",
-       "      <td>-32.5</td>\n",
-       "      <td>137.77</td>\n",
-       "      <td>20</td>\n",
-       "      <td>4.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Port Hardy</td>\n",
-       "      <td>75</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>1580087401</td>\n",
-       "      <td>81</td>\n",
-       "      <td>50.7</td>\n",
-       "      <td>-127.42</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Punta Arenas</td>\n",
-       "      <td>20</td>\n",
-       "      <td>CL</td>\n",
-       "      <td>1580086239</td>\n",
-       "      <td>47</td>\n",
-       "      <td>-53.15</td>\n",
-       "      <td>-70.92</td>\n",
-       "      <td>14</td>\n",
-       "      <td>12.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Arraial do Cabo</td>\n",
-       "      <td>0</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>1580074649</td>\n",
-       "      <td>69</td>\n",
-       "      <td>-22.97</td>\n",
-       "      <td>-42.03</td>\n",
-       "      <td>27</td>\n",
-       "      <td>5.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              City Cloudiness Country        Date Humidity    Lat     Lng  \\\n",
-       "0            Ancud         40      CL  1580084616       59 -41.87  -73.82   \n",
-       "1     Port Augusta         75      AU  1580118923       82  -32.5  137.77   \n",
-       "2       Port Hardy         75      CA  1580087401       81   50.7 -127.42   \n",
-       "3     Punta Arenas         20      CL  1580086239       47 -53.15  -70.92   \n",
-       "4  Arraial do Cabo          0      BR  1580074649       69 -22.97  -42.03   \n",
-       "\n",
-       "  Max Temp Wind Speed  \n",
-       "0       18        2.6  \n",
-       "1       20        4.6  \n",
-       "2        9        3.6  \n",
-       "3       14       12.9  \n",
-       "4       27        5.7  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "city_data = pd.DataFrame(columns=['City', 'Cloudiness', 'Country', 'Date', 'Humidity', 'Lat', 'Lng', 'Max Temp', 'Wind Speed'])\n",
     "for city  in cities:\n",
