--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -531,8 +531,7 @@
     "#Cloudiness Filter\n",
     "#0\n",
     "cloudiness_wish = float(input('What is the max cloudiness you wish?  '))\n",
-    "city_data = city_data.drop(city_data[city_data[\"Cloudiness\"] == cloudiness_wish].index)\n",
-    "city_data"
+    "city_data = city_data.drop(city_data[city_data[\"Cloudiness\"] == cloudiness_wish].index)"
    ]
   },
   {
@@ -756,8 +755,7 @@
     "#Max Temp Filter\n",
     "#80\n",
     "max_temp_wish = float(input('What is the Max Temp you wish?  '))\n",
-    "city_data = city_data.drop(city_data[city_data[\"Max Temp\"] > max_temp_wish].index)\n",
-    "city_data"
+    "city_data = city_data.drop(city_data[city_data[\"Max Temp\"] > max_temp_wish].index)\n"
    ]
   },
   {
@@ -981,8 +979,7 @@
     "#Min Temp Filter\n",
     "#70\n",
     "min_temp_wish = float(input('What is the Min Temp you wish?  '))\n",
-    "city_data = city_data.drop(city_data[city_data[\"Max Temp\"] <= min_temp_wish].index)\n",
-    "city_data"
+    "city_data = city_data.drop(city_data[city_data[\"Max Temp\"] <= min_temp_wish].index)\n"
    ]
   },
   {
@@ -1206,64 +1203,23 @@
     "#Wind Speed Filter\n",
     "#10\n",
     "wind_speed_wish = float(input('What is the Max Wind Speed you wish?  '))\n",
-    "city_data = city_data.drop(city_data[city_data[\"Wind Speed\"] >= wind_speed_wish].index)\n",
-    "city_data"
+    "hotel_df = city_data.drop(city_data[city_data[\"Wind Speed\"] >= wind_speed_wish].index)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [City, Cloudiness, Country, Date, Humidity, Lat, Lng, Max Temp, Wind Speed]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    " # params dictionary to update each iteration\n",
+    "params = {\n",
+    "    \"radius\": 5000,\n",
+    "    \"types\": \"hotel\",\n",
+    "    \"keyword\": \"international airport\",\n",
+    "    \"key\": g_key\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
