--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "620"
+       "629"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,86 +137,86 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Puerto Ayora</td>\n",
-       "      <td>20</td>\n",
-       "      <td>EC</td>\n",
-       "      <td>1581466793</td>\n",
-       "      <td>62</td>\n",
-       "      <td>-0.74</td>\n",
-       "      <td>-90.35</td>\n",
-       "      <td>84.2</td>\n",
-       "      <td>17.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Nikolskoye</td>\n",
-       "      <td>75</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>1581518304</td>\n",
-       "      <td>96</td>\n",
-       "      <td>59.7</td>\n",
-       "      <td>30.79</td>\n",
-       "      <td>36</td>\n",
-       "      <td>6.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Hualmay</td>\n",
-       "      <td>98</td>\n",
-       "      <td>PE</td>\n",
-       "      <td>1581464374</td>\n",
-       "      <td>82</td>\n",
-       "      <td>-11.1</td>\n",
-       "      <td>-77.61</td>\n",
-       "      <td>70.68</td>\n",
-       "      <td>6.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Punta Arenas</td>\n",
-       "      <td>90</td>\n",
-       "      <td>CL</td>\n",
-       "      <td>1581466957</td>\n",
-       "      <td>82</td>\n",
-       "      <td>-53.15</td>\n",
-       "      <td>-70.92</td>\n",
-       "      <td>55.4</td>\n",
-       "      <td>6.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Mataura</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Rikitea</td>\n",
        "      <td>100</td>\n",
-       "      <td>NZ</td>\n",
-       "      <td>1581494663</td>\n",
-       "      <td>81</td>\n",
-       "      <td>-46.19</td>\n",
-       "      <td>168.86</td>\n",
-       "      <td>61</td>\n",
-       "      <td>11.01</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>1581565315</td>\n",
+       "      <td>79</td>\n",
+       "      <td>-23.12</td>\n",
+       "      <td>-134.97</td>\n",
+       "      <td>78.73</td>\n",
+       "      <td>17.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mount Isa</td>\n",
+       "      <td>41</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1581585667</td>\n",
+       "      <td>22</td>\n",
+       "      <td>-20.73</td>\n",
+       "      <td>139.5</td>\n",
+       "      <td>91.4</td>\n",
+       "      <td>11.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Port Lincoln</td>\n",
+       "      <td>74</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1581587632</td>\n",
+       "      <td>73</td>\n",
+       "      <td>-34.73</td>\n",
+       "      <td>135.87</td>\n",
+       "      <td>70.54</td>\n",
+       "      <td>8.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>New Norfolk</td>\n",
+       "      <td>90</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1581585775</td>\n",
+       "      <td>72</td>\n",
+       "      <td>-42.78</td>\n",
+       "      <td>147.06</td>\n",
+       "      <td>64</td>\n",
+       "      <td>3.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Arraial do Cabo</td>\n",
+       "      <td>100</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1581543008</td>\n",
+       "      <td>89</td>\n",
+       "      <td>-22.97</td>\n",
+       "      <td>-42.03</td>\n",
+       "      <td>72.23</td>\n",
+       "      <td>8.59</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           City Cloudiness Country        Date Humidity    Lat     Lng  \\\n",
-       "0  Puerto Ayora         20      EC  1581466793       62  -0.74  -90.35   \n",
-       "1    Nikolskoye         75      RU  1581518304       96   59.7   30.79   \n",
-       "2       Hualmay         98      PE  1581464374       82  -11.1  -77.61   \n",
-       "3  Punta Arenas         90      CL  1581466957       82 -53.15  -70.92   \n",
-       "4       Mataura        100      NZ  1581494663       81 -46.19  168.86   \n",
+       "              City Cloudiness Country        Date Humidity    Lat     Lng  \\\n",
+       "0          Rikitea        100      PF  1581565315       79 -23.12 -134.97   \n",
+       "1        Mount Isa         41      AU  1581585667       22 -20.73   139.5   \n",
+       "2     Port Lincoln         74      AU  1581587632       73 -34.73  135.87   \n",
+       "3      New Norfolk         90      AU  1581585775       72 -42.78  147.06   \n",
+       "4  Arraial do Cabo        100      BR  1581543008       89 -22.97  -42.03   \n",
        "\n",
        "  Max Temp Wind Speed  \n",
-       "0     84.2      17.22  \n",
-       "1       36       6.71  \n",
-       "2    70.68       6.96  \n",
-       "3     55.4       6.93  \n",
-       "4       61      11.01  "
+       "0    78.73      17.69  \n",
+       "1     91.4      11.41  \n",
+       "2    70.54       8.41  \n",
+       "3       64       3.36  \n",
+       "4    72.23       8.59  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
